Corrected some grammar

--- a/about.html
+++ b/about.html
@@ -339,7 +339,7 @@
                             <hr>
                             <p class="fs-5">
                                 Oh wait, scratch that !<br>
-                                That's my own portifolio 😄
+                                That's my own portfolio 😄
                             </p>
                             <p class="mx-2 mx-lg-0">
                                 <a href="index.html" class="pill bg-secondaryClr text-light text-decoration-none"><span class="fa fa-angle-right me-2"></span> Home</a>
