--- a/projects.html
+++ b/projects.html
@@ -104,8 +104,8 @@
             <hr class="mb-5">
             <div class="d-lg-flex flex-row-reverse mb-5">
                 <p class="col-lg-7 abs-images">
-                    <img src="assets/images/projectImages/esg_chms_landscape.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
-                    <img src="assets/images/projectImages/esg_gallery_portrait_light.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
+                    <img src="assets/images/projectImages/esg_chms_landscape.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
+                    <img src="assets/images/projectImages/esg_gallery_portrait_light.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
                 </p>
                 <div class="col-lg-5 p-2 p-md-4">
                     <p class="fs-5 text-justify">
@@ -132,8 +132,8 @@
             <hr class="mb-5">
             <div class="d-lg-flex flex-row-reverse mb-5">
                 <p class="col-lg-7 abs-images">
-                    <img src="assets/images/projectImages/yacn_programs_landscape.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
-                    <img src="assets/images/projectImages/yacn_programs_portrait3.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
+                    <img src="assets/images/projectImages/yacn_programs_landscape.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
+                    <img src="assets/images/projectImages/yacn_programs_portrait3.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
                 </p>
                 <div class="col-lg-5 p-2 p-md-4">
                     <p class="fs-5 text-justify">
