--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="d-lg-flex mb-5">
                 <p class="col-lg-7 abs-images">
                     <img src="assets/images/In dev cover photo.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
-                    <img src="assets/images/projectImages/yacn_about_landscape.png" alt="Project image" class="object-fit-contain rad-10 clip-path-section" style="width: 35% !important;">
+                    <img src="assets/images/projectImages/yacn_about_landscape.jpg" alt="Project image" class="object-fit-contain rad-10 clip-path-section" style="width: 35% !important;">
                 </p>
                 <p class="col-lg-5 p-2 p-md-4 fs-5">
                     As a frontend web developer and UI/UX designer, I specialize in crafting dynamic and <strong>responsive websites</strong>, engaging <strong>landing pages</strong> optimized for performance, and creating <strong>intuitive designs</strong> that prioritize user experience and align with your brand identity.<br>
