--- a/about.html
+++ b/about.html
@@ -136,8 +136,8 @@
                                     <li>My jeans are quite short 😄</li>
                                 </ul>
                                 <div class="mx-auto item-light rad-15 image-grids image-grids-two-vertical image-grids-bordered" style=" max-width: 250px;">
-                                    <img src="assets/images/hirwawilly_passport_photo-transparent.png" alt="My picture">
-                                    <img src="assets/images/hirwa_music.jpg" alt="My picture">
+                                    <img src="assets/images/hirwawilly_passport_photo-transparent.png" alt="My photo">
+                                    <img src="assets/images/hirwa_music.jpg" alt="My photo">
                                 </div>
                             </div>
                             <p class="mx-2 mx-lg-0">
