Added tawk chat widget

--- a/index.html
+++ b/index.html
@@ -158,6 +158,29 @@
                 </p>
             </div>
         </section>
+        <!-- 2Chat chatbot -->
+        <!-- <script>
+            window._2chatConfig = {
+            phoneNumber:'+250785459848',
+            accountName: `Welcome!`,
+            statusMessage: `I typically reply within 1 - 2 hours`,
+            chatMessage: 
+            `Hey there! 👋
+            How can I help you?`,
+            placeholder: 'Type your message...',
+            position: 'right',
+            colorScheme: 'automatic',
+            showNotification: true,
+          };
+        
+          (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return; 
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://widgets.2chat.io/index.js';
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', '_2chat'));
+        </script> -->
 
     </main>
     
@@ -187,5 +210,18 @@
         </div>
     </footer>
     <script src="myScripts.js"></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/6644ae449a809f19fb312ba1/1htu4hfv9';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </html>
