--- a/index.html
+++ b/index.html
@@ -158,29 +158,6 @@
                 </p>
             </div>
         </section>
-        <!-- 2Chat chatbot -->
-        <!-- <script>
-            window._2chatConfig = {
-            phoneNumber:'+250785459848',
-            accountName: `Welcome!`,
-            statusMessage: `I typically reply within 1 - 2 hours`,
-            chatMessage: 
-            `Hey there! 👋
-            How can I help you?`,
-            placeholder: 'Type your message...',
-            position: 'right',
-            colorScheme: 'automatic',
-            showNotification: true,
-          };
-        
-          (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return; 
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://widgets.2chat.io/index.js';
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', '_2chat'));
-        </script> -->
 
     </main>
     
@@ -211,7 +188,7 @@
     </footer>
     <script src="myScripts.js"></script>
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
             var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -221,7 +198,12 @@
             s1.setAttribute('crossorigin','*');
             s0.parentNode.insertBefore(s1,s0);
         })();
-    </script>
+    </script> -->
+
+    <!--Start of WhatsApp widget Script-->
+    <!-- <script async src='https://whats.stacklix.com/pixel/7d7f7d7670b84a39b8f02f8cef91b178'></script> -->
+    <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="24466"></script>
+
     <!--End of Tawk.to Script-->
 </body>
 </html>
