Added WhatsApp widget

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </footer>
     <script src="myScripts.js"></script>
-    <!--Start of Tawk.to Script-->
+    <!--Tawk.to widget Script-->
     <!-- <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
@@ -200,10 +200,8 @@
         })();
     </script> -->
 
-    <!--Start of WhatsApp widget Script-->
-    <!-- <script async src='https://whats.stacklix.com/pixel/7d7f7d7670b84a39b8f02f8cef91b178'></script> -->
+    <!--WhatsApp widget Script-->
     <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="24466"></script>
 
-    <!--End of Tawk.to Script-->
 </body>
 </html>
