--- a/about.html
+++ b/about.html
@@ -377,8 +377,8 @@
         </div>
     </footer>
     <script src="myScripts.js"></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <!--Tawk.to widget Script-->
+    <!-- <script type="text/javascript">
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
             var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -388,6 +388,9 @@
             s1.setAttribute('crossorigin','*');
             s0.parentNode.insertBefore(s1,s0);
         })();
-    </script>
+    </script> -->
+
+    <!--WhatsApp widget Script-->
+    <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="24466"></script>
 </body>
 </html>
