Changed social media links

--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                             <p class="mx-2 mx-lg-0">
                                 <a href="tel:+250785459848" target="_blank" class="pill my-1 d-inline-block bg-secondaryClr text-light text-decoration-none" title="My phone"><span class="fa fa-phone me-2"></span><span class="fab fa-whatsapp"></span> <span class="small">(+250) 785 459 848</span></a>
                                 <a href="https://www.facebook.com/profile.php?id=100009250550394" target="_blank" class="pill my-1 d-inline-block bg-secondaryClr text-light text-decoration-none" title="My facebook"><span class="fab fa-facebook me-2"></span> FB</a>
-                                <a href="https://www.instagram.com/h.willy9/" target="_blank" class="pill my-1 d-inline-block bg-secondaryClr text-light text-decoration-none" title="My instagram"><span class="fab fa-instagram me-2"></span> IG</a>
+                                <a href="https://www.instagram.com/hirwa__willy/" target="_blank" class="pill my-1 d-inline-block bg-secondaryClr text-light text-decoration-none" title="My instagram"><span class="fab fa-instagram me-2"></span> IG</a>
                             </p>
                         </article>
                     </div>
@@ -360,7 +360,7 @@
                 <a href="http://linkedin.com/in/hirwa-cyuzuzo-willy-94159427b" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My linkedin"><span class="fab fa-linkedin"></span></a>
                 <a href="https://github.com/Hirwa9" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Github"><span class="fab fa-github"></span></a>
                 <!-- <a href="https://twitter.com/Hirwa89" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Twitter"><span class="fab fa-twitter"></span></a> -->
-                <a href="https://www.instagram.com/h.willy9/" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My instagram"><span class="fab fa-instagram"></span></a>
+                <a href="https://www.instagram.com/hirwa__willy/" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My instagram"><span class="fab fa-instagram"></span></a>
                 <!-- <a href="https://www.facebook.com/profile.php?id=100009250550394" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Facebook"><span class="fab fa-facebook"></span></a> -->
             </div>
             <nav class="flex-center p-3">
