--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                     <a href="http://linkedin.com/in/hirwa-cyuzuzo-willy-94159427b" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My linkedin"><span class="fab fa-linkedin"></span></a>
                     <a href="https://github.com/Hirwa9" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Github"><span class="fab fa-github"></span></a>
                     <!-- <a href="https://twitter.com/Hirwa89" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Twitter"><span class="fab fa-twitter"></span></a> -->
-                    <a href="https://www.instagram.com/h.willy9/" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My instagram"><span class="fab fa-instagram"></span></a>
+                    <a href="https://www.instagram.com/hirwa__willy/" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My instagram"><span class="fab fa-instagram"></span></a>
                     <!-- <a href="https://www.facebook.com/profile.php?id=100009250550394" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Facebook"><span class="fab fa-facebook"></span></a> -->
                 </div>
             </section>
@@ -139,7 +139,7 @@
                 <a href="http://linkedin.com/in/hirwa-cyuzuzo-willy-94159427b" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My linkedin"><span class="fab fa-linkedin"></span></a>
                 <a href="https://github.com/Hirwa9" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Github"><span class="fab fa-github"></span></a>
                 <!-- <a href="https://twitter.com/Hirwa89" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Twitter"><span class="fab fa-twitter"></span></a> -->
-                <a href="https://www.instagram.com/h.willy9/" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My instagram"><span class="fab fa-instagram"></span></a>
+                <a href="https://www.instagram.com/hirwa__willy/" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My instagram"><span class="fab fa-instagram"></span></a>
                 <!-- <a href="https://www.facebook.com/profile.php?id=100009250550394" class="btn btn-lg pill mx-2 my-2 bg-primaryClr text-light bounceClick" target="_blank" title="My Facebook"><span class="fab fa-facebook"></span></a> -->
             </div>
             <nav class="flex-center p-3">
