added new technical skill

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                         👨🏾‍💻 I'm a frontend web developer and UI/UX designer based in Kigali, Rwanda.
                     </p>
                     <p class="fw-bold text-muted text-justify" style="line-height: 26px;">
-                        With a passion for both design and development, I specialize in crafting intuitive user interfaces and writing elegant, efficient code. I've honed my skills in HTML, CSS, JavaScript, and jQuery to create simple yet beautiful web experiences, with a few of the backend skills like PHP and Python.
+                        With a passion for both design and development, I specialize in crafting intuitive user interfaces and writing elegant, efficient code. I've honed my skills in HTML, CSS, JavaScript, AngularJS, and jQuery to create simple yet beautiful web experiences, with a few of the backend skills like PHP.
                     </p>
                     <p class="small text-muted">
                         When I'm not coding or designing, you'll often find me lost in the rhythm of music 😄, either tinkering on a piano or in my choir. In fact, <a href="https://esgrprwanda.rf.gd/esgrp/Services/CHM_Songs" target="_blank">my biggets personal project</a> is about music.
