--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <li>JavaScript (JS)</li>
                         <li>jQuery</li>
                         <li>PHP</li>
+                        <li>AngularJS</li>
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Sass</li>
