--- a/projects.html
+++ b/projects.html
@@ -114,9 +114,9 @@
                     <h6 class="p-2 mb-0 text-center bg-secondaryClr" style="border-radius: 10px 10px 0 0;">Technologies</h6>
                     <ul class="p-2 site-technologies list-flexible">
                         <li>HTML</li>
+                        <li>PHP & AngularJS</li>
                         <li>CSS & BS5</li>
                         <li>jQ & JS</li>
-                        <li>PHP</li>
                     </ul>
                     <p class="d-flex gap-2">
                         <a href="https://github.com/Hirwa9/ESG-website" target="_blank" class="btn btn-dark w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
@@ -142,9 +142,9 @@
                     <h6 class="p-2 mb-0 text-center bg-secondaryClr" style="border-radius: 10px 10px 0 0;">Technologies</h6>
                     <ul class="p-2 site-technologies list-flexible">
                         <li>HTML</li>
+                        <li>PHP & AngularJS</li>
                         <li>CSS & BS5</li>
                         <li>jQ & JS</li>
-                        <li>PHP</li>
                     </ul>
                     <p class="d-flex gap-2">
                         <a href="#" target="_blank" class="btn btn-dark w-50 my-4 clickDown disabled" aria-disabled="true"><span class="fab fa-github"></span> Code</a>
