added new technical skill

--- a/about.html
+++ b/about.html
@@ -250,9 +250,9 @@
                                         <div>80%</div><div>Sass</div>
                                     </div>
                                 </div>
-                                <div class="level-space figma-level" style="--_level: 60%">
+                                <div class="level-space angularJs-level" style="--_level: 60%">
                                     <div class="level-data">
-                                        <div>60%</div><div>Figma</div>
+                                        <div>60%</div><div>AngularJS</div>
                                     </div>
                                 </div>
                                 <div class="level-space php-level" style="--_level: 50%">
