Added a product mockup

--- a/services.html
+++ b/services.html
@@ -103,10 +103,19 @@
                 </div>
             </section>
         </div>
-        <div class="d-lg-flex flex-wrap container services-showcase">
+        <div class="d-lg-flex flex-wrap position-relative container services-showcase">
+            <div class="col-12 h-25vh"></div>
+            <div class="position-absolute inset-0 col-12 inx--1 bg-no-repeat-cover-center mask-bottom" 
+            style="height: 125vh; opacity: .4;
+            background-image: url(assets/images/projectImages/product_representation1.jpg);
+            background-attachment: fixed;
+            --mask: conic-gradient(from 135deg at top,#0000,#000 1deg 89deg,#0000 90deg) 50%/50px 100%;
+            -webkit-mask: var(--mask);
+            mask: var(--mask);
+            "></div>
             <!-- Websites -->
-            <article class="col-lg-6 mt-5 p-md-4 service-article">
-                <h2 class="my-4 text-secondaryClr fs-2">Website Development</h2>
+            <article class="col-lg-6 mt-5 p-md-4 service-article bg-white3 blur-bg-5px">
+                <h2 class="my-4 text-primaryClr fs-2">Website Development</h2>
                 <hr class="hr-lg">
                 <p class="fs-5">
                     From concept to launch, I specialize in crafting dynamic and responsive websites tailored to your unique needs. Whether you're a small business owner or a large corporation, I work closely with you to bring your vision to life, ensuring a seamless user experience across all devices.
@@ -125,8 +134,8 @@
                 </p>
             </article>
             <!-- Landing pages -->
-            <article class="col-lg-6 mt-5 p-md-4 service-article">
-                <h2 class="my-4 text-secondaryClr fs-2">Landing Page Creation</h2>
+            <article class="col-lg-6 mt-5 p-md-4 service-article bg-white3 blur-bg-5px">
+                <h2 class="my-4 text-primaryClr fs-2">Landing Page Creation</h2>
                 <hr class="hr-lg">
                 <p class="fs-5">
                     Impress your audience with stunning landing pages that drive conversions. I create engaging landing pages optimized for performance and designed to capture leads. Whether you're launching a new product or promoting a special offer, I'll help you make a memorable first impression.
@@ -145,7 +154,7 @@
                 </p>
             </article>
             <!-- UI design -->
-            <article class="col-lg-6 mt-5 p-md-4 service-article">
+            <!-- <article class="col-lg-6 mt-5 p-md-4 service-article">
                 <h2 class="my-4 text-secondaryClr fs-2">UI Design</h2>
                 <hr class="hr-lg">
                 <p class="fs-5">
@@ -163,7 +172,7 @@
                 <p>
                     <a href="contact.html" class="btn btn-lg bg-primaryClr text-light">Require service</a>
                 </p>
-            </article>
+            </article> -->
         </div>
     </main>
     
