Added a new project record

--- a/projects.html
+++ b/projects.html
@@ -153,6 +153,33 @@
                 </div>
             </div>
         </section>
+        
+        <!-- Eliazar -->
+        <section class="mt-5 py-3 shadow container project-elem">
+            <h2 class="text-secondaryClr fs-1">Eliazar's personal website</h2>
+            <hr class="mb-5">
+            <div class="d-lg-flex flex-row-reverse mb-5">
+                <p class="col-lg-7 abs-images">
+                    <img src="assets/images/projectImages/eliazar_music_landscape.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
+                    <img src="assets/images/projectImages/eliazar_music_portrait.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
+                </p>
+                <div class="col-lg-5 p-2 p-md-4">
+                    <p class="fs-5 text-justify">
+                        This is a personal blog of Eliazar Ndayisabye, showcasing his unique personality and a wide range of compositions. As a passionate musician and creator, Eliazar uses this platform to share his original music, offering listeners a glimpse into his creative process and musical journey. The site is such a comprehensive look at his artistic endeavors and personal insights.
+                    </p>
+                    <h6 class="p-2 mb-0 text-center bg-secondaryClr" style="border-radius: 10px 10px 0 0;">Technologies</h6>
+                    <ul class="p-2 site-technologies list-flexible">
+                        <li>HTML & PHP</li>
+                        <li>CSS & BS5</li>
+                        <li>jQ & JS</li>
+                    </ul>
+                    <p class="d-flex gap-2">
+                        <a href="#" target="_blank" class="btn btn-dark w-50 my-4 clickDown disabled" aria-disabled="true"><span class="fab fa-github"></span> Code</a>
+                        <a href="https://eliazarndayisabye.c1.is/music.php" target="_blank" class="btn btn-dark w-50 my-4 clickDown">Visit site</a>
+                    </p>
+                </div>
+            </div>
+        </section>
 
 
     </main>
