--- a/about.html
+++ b/about.html
@@ -333,6 +333,22 @@
                             </p>
                         </article>
 
+                        <!-- Personal blogs -->
+                        <article class="mb-5">
+                            <h4 class="text-secondaryClr fs-3">Personal blogs</h4>
+                            <hr>
+                            <p class="fs-5">
+                                <mark>Eliazar's personal blog</mark>, a blog showcasing unique personality and a wide range of compositions for a passionate musician, creator and educator.
+                            </p>
+                            <h5 class="fst-italic text-decoration-underline">Roles</h5>
+                            <ul class="small mx-2 mx-lg-0">
+                                <li>Web development</li>
+                            </ul>
+                            <p class="mx-2 mx-lg-0">
+                                <a href="projects.html" class="pill bg-secondaryClr text-light text-decoration-none"><span class="fa fa-angle-right me-2"></span> My projects</a>
+                            </p>
+                        </article>
+
                         <!-- ESG -->
                         <article class="mb-5">
                             <h4 class="text-secondaryClr fs-3">Hirwa</h4>
