Changed Eliazar's project link

--- a/projects.html
+++ b/projects.html
@@ -175,7 +175,7 @@
                     </ul>
                     <p class="d-flex gap-2">
                         <a href="#" target="_blank" class="btn btn-dark w-50 my-4 clickDown disabled" aria-disabled="true"><span class="fab fa-github"></span> Code</a>
-                        <a href="https://eliazarndayisabye.c1.is/music.php" target="_blank" class="btn btn-dark w-50 my-4 clickDown">Visit site</a>
+                        <a href="https://eliazarndayisabye.rf.gd/music.php" target="_blank" class="btn btn-dark w-50 my-4 clickDown">Visit site</a>
                     </p>
                 </div>
             </div>
