--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
         </section>
         
         <!-- YACN -->
-        <section class="mt-5 py-3 shadow container project-elem">
+        <!-- <section class="mt-5 py-3 shadow container project-elem">
             <h2 class="text-secondaryClr fs-1">Youth Alliance for Conservation of Nature (YACN) website</h2>
             <hr class="mb-5">
             <div class="d-lg-flex flex-row-reverse mb-5">
@@ -152,7 +152,7 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </section> -->
         
         <!-- Eliazar -->
         <section class="mt-5 py-3 shadow container project-elem">
