--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
                         </article>
 
                         <!-- ESG -->
-                        <article class="mb-5">
+                        <!-- <article class="mb-5">
                             <h4 class="text-secondaryClr fs-3">YACN</h4>
                             <hr>
                             <p class="fs-5">
@@ -331,7 +331,7 @@
                             <p class="mx-2 mx-lg-0">
                                 <a href="projects.html" class="pill bg-secondaryClr text-light text-decoration-none"><span class="fa fa-angle-right me-2"></span> My projects</a>
                             </p>
-                        </article>
+                        </article> -->
 
                         <!-- Personal blogs -->
                         <article class="mb-5">
