--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h2 class="display-6 fw-bold py-2 section-title">A glimpse on my projects</h2>
             <div class="d-lg-flex flex-row-reverse mb-5">
                 <p class="col-lg-7 abs-images">
-                    <img src="assets/images/projectImages/esg_chms_landscape.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
+                    <img src="assets/images/projectImages/esg_chms_landscape.png" alt="Project image" class="object-fit-contain rad-10 trbl-shadow-lg">
                     <img src="assets/images/projectImages/esg_gallery_portrait_light.jpg" alt="Project image" class="object-fit-contain rad-10 trbl-shadow">
                 </p>
                 <p class="col-lg-5 p-2 p-md-4 fs-5 text-justify">
