Enhanced projects presentation UI

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </p>
                 <p class="col-lg-5 p-2 p-md-4 fs-5 text-justify">
                     <b>The ES group</b>, a Rwandan Catholic singing ensemble, offers an interactive website for members and visitors. It provides details on the group's compositions, event galleries, and an interactive calendar for upcoming events. Additionally, visitors can access a wide collection of Rwandan Catholic music files and music teaching resources.<br>
-                    <a href="projects.html" class="btn btn-lg bg-secondaryClr my-4 clickDown">See all projects</a>
+                    <a href="projects.html" class="btn btn-lg bg-secondaryClr text-light my-4 clickDown">See all projects</a>
                 </p>
             </div>
         </section>
@@ -131,15 +131,15 @@
                         My approach to projects involves relying on a specific set of technologies that I've become good at using. These tools have become indispensable to me, serving as the foundation for tackling any project that I work on:
                     </p>
                     <ul class="px-0 list-flexible">
-                        <li>JavaScript (JS)</li>
-                        <li>jQuery</li>
-                        <li>PHP</li>
-                        <li>AngularJS</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Sass</li>
-                        <li>Bootstrap</li>
-                        <li>Figma</li>
+                        <li class="bg-secondaryClr text-light">JavaScript (JS)</li>
+                        <li class="bg-secondaryClr text-light">jQuery</li>
+                        <li class="bg-secondaryClr text-light">PHP</li>
+                        <li class="bg-secondaryClr text-light">AngularJS</li>
+                        <li class="bg-secondaryClr text-light">HTML</li>
+                        <li class="bg-secondaryClr text-light">CSS</li>
+                        <li class="bg-secondaryClr text-light">Sass</li>
+                        <li class="bg-secondaryClr text-light">Bootstrap</li>
+                        <li class="bg-secondaryClr text-light">Figma</li>
                     </ul>
                 </div>
             </article>
@@ -155,7 +155,7 @@
                 </p>
                 <p class="col-lg-5 p-2 p-md-4 fs-5">
                     As a frontend web developer and UI/UX designer, I specialize in crafting dynamic and <strong>responsive websites</strong>, engaging <strong>landing pages</strong> optimized for performance, and creating <strong>intuitive designs</strong> that prioritize user experience and align with your brand identity.<br>
-                    <a href="services.html" class="btn btn-lg bg-secondaryClr my-4 clickDown">My services</a>
+                    <a href="services.html" class="btn btn-lg bg-secondaryClr text-light my-4 clickDown">My services</a>
                 </p>
             </div>
         </section>
