Enhanced projects presentation UI

--- a/projects.html
+++ b/projects.html
@@ -111,16 +111,19 @@
                     <p class="text-justify project-info">
                         The ES group, a Rwandan Catholic singing ensemble, offers an interactive website for members and visitors. It provides details on the group's compositions, event galleries, and an interactive calendar for upcoming events. Additionally, visitors can access a wide collection of Rwandan Catholic music files and music teaching resources.
                     </p>
-                    <h6 class="p-2 mb-0 text-center bg-secondaryClr text-light" style="border-radius: 10px 10px 0 0;">Technologies</h6>
-                    <ul class="p-2 site-technologies small list-flexible shadow">
+                    <h6 class="p-2 mb-0 text-center bg-secondaryClr3 text-secondaryClr fw-bold" style="border-radius: 10px 10px 0 0;">Technologies</h6>
+                    <ul class="p-2 site-technologies small list-flexible">
+                        <li>PHP</li>
+                        <li>AngularJS</li>
+                        <li>MySQL</li>
+                        <li>jQuery</li>
+                        <li>JS</li>
                         <li>HTML</li>
-                        <li>PHP & AngularJS</li>
-                        <li>CSS & BS5</li>
-                        <li>jQ & JS</li>
+                        <li>BS5</li>
                     </ul>
                     <p class="d-flex gap-2">
-                        <a href="https://github.com/Hirwa9/ESG-website" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr text-secondaryClr fw-bold w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
-                        <a href="https://esgrprwanda.rf.gd/" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr text-secondaryClr fw-bold w-50 my-4 clickDown">Visit site <span class="fa fa-angle-right ms-1"></span></a>
+                        <a href="https://github.com/Hirwa9/ESG-website" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
+                        <a href="https://esgrprwanda.rf.gd/" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown">Visit site <span class="fa fa-angle-right ms-1"></span></a>
                     </p>
                 </div>
             </div>
@@ -139,16 +142,18 @@
                     <p class="text-justify project-info">
                         The YACN website is a dynamic hub for environmental enthusiasts, offering comprehensive insights into the organization's vision, mission, programs, and core values. Advocating for sustainable practices, they empower youth to drive positive change through collaboration, education, and action, just for shaping a greener future for our planet.
                     </p>
-                    <h6 class="p-2 mb-0 text-center bg-secondaryClr text-light" style="border-radius: 10px 10px 0 0;">Technologies</h6>
-                    <ul class="p-2 site-technologies small list-flexible shadow">
+                    <h6 class="p-2 mb-0 text-center bg-secondaryClr3 text-secondaryClr fw-bold" style="border-radius: 10px 10px 0 0;">Technologies</h6>
+                    <ul class="p-2 site-technologies small list-flexible">
+                        <li>PHP</li>
+                        <li>AngularJS</li>
+                        <li>jQuery</li>
+                        <li>JS</li>
                         <li>HTML</li>
-                        <li>PHP & AngularJS</li>
-                        <li>CSS & BS5</li>
-                        <li>jQ & JS</li>
+                        <li>BS5</li>
                     </ul>
                     <p class="d-flex gap-2">
-                        <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true"><span class="fab fa-github"></span> Code</a>
-                        <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true">Visit site <span class="fa fa-angle-right ms-1"></span></a>
+                        <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true"><span class="fab fa-github"></span> Code</a>
+                        <a href="#" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown disabled" aria-disabled="true">Visit site <span class="fa fa-angle-right ms-1"></span></a>
                     </p>
                 </div>
             </div>
@@ -167,15 +172,19 @@
                     <p class="text-justify project-info">
                         This is a personal blog of Eliazar Ndayisabye, showcasing his unique personality and a wide range of compositions. As a passionate musician and creator, Eliazar uses this platform to share his original music, offering listeners a glimpse into his creative process and musical journey. The site is such a comprehensive look at his artistic endeavors and personal insights.
                     </p>
-                    <h6 class="p-2 mb-0 text-center bg-secondaryClr text-light" style="border-radius: 10px 10px 0 0;">Technologies</h6>
-                    <ul class="p-2 site-technologies small list-flexible shadow">
-                        <li>HTML & PHP</li>
-                        <li>CSS & BS5</li>
-                        <li>jQ & JS</li>
+                    <h6 class="p-2 mb-0 text-center bg-secondaryClr3 text-secondaryClr fw-bold" style="border-radius: 10px 10px 0 0;">Technologies</h6>
+                    <ul class="p-2 site-technologies small list-flexible">
+                        <li>PHP</li>
+                        <li>Ajax</li>
+                        <li>MySQL</li>
+                        <li>jQuery</li>
+                        <li>JS</li>
+                        <li>HTML</li>
+                        <li>BS5</li>
                     </ul>
                     <p class="d-flex gap-2">
-                        <a href="https://github.com/Hirwa9/Eliazar-Website" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr text-secondaryClr fw-bold w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
-                        <a href="https://eliazarndayisabye.rf.gd/music.php" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr text-secondaryClr fw-bold w-50 my-4 clickDown">Visit site <span class="fa fa-angle-right ms-1"></span></a>
+                        <a href="https://github.com/Hirwa9/Eliazar-Website" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown"><span class="fab fa-github"></span> Code</a>
+                        <a href="https://eliazarndayisabye.rf.gd/music.php" target="_blank" class="btn btn-sm py-2 rounded-pill border-secondaryClr2 border-2 text-secondaryClr fw-bold w-50 my-4 clickDown">Visit site <span class="fa fa-angle-right ms-1"></span></a>
                     </p>
                 </div>
             </div>
